--- a/indextwo.html
+++ b/indextwo.html
@@ -104,7 +104,7 @@
   <body id="all">
     <div id="thermal-pos">
       <div class="label">
-        <img src="logo.jpg" alt="Mi imagen" class="mi-imagen" /><br />
+        <img src="https://github.com/pagesinvoice/invoice/blob/main/logoindex.jpeg?raw=true" alt="Mi imagen" class="mi-imagen" /><br />
         <b id="empresa"></b><br />
         <b id="razon"></b>
         <div class="label">
