--- a/indexone.html
+++ b/indexone.html
@@ -272,7 +272,7 @@
               text-align: center;
             "
           >
-            MONTO EN LETRAS: <span id="montoLetras"></span> LEMPIRAS
+            MONTO EN LETRAS: <span id="montoLetras"></span> 
           </td>
         </tr>
         <tr>
