--- a/indextwo.html
+++ b/indextwo.html
@@ -632,7 +632,7 @@
       // Set monto en letras
       var total = parseFloat(getUrlParameter("total"));
       document.getElementById("montoLetras").textContent =
-        "SON " + numeroALetras(total) + " LEMPIRAS";
+        "SON " + numeroALetras(total);
 
       // Trigger print when the page loads
       window.onload = function () {
