--- a/indextwo.html
+++ b/indextwo.html
@@ -324,7 +324,7 @@
 
       <div align="center">------------------------------------------------</div>
 
-      <div id="montoLetras"></div>
+      <div id="montoLetras" style="text-align: center"></div>
 
       <div align="center">------------------------------------------------</div>
       <div align="center">Gracias por su preferencia!!</div>
