--- a/indextwo.html
+++ b/indextwo.html
@@ -437,196 +437,120 @@
 
       // Function to convert number to words (Spanish)
       function numeroALetras(numero) {
-        function Unidades(num) {
-          switch (num) {
-            case 1:
-              return "UN";
-            case 2:
-              return "DOS";
-            case 3:
-              return "TRES";
-            case 4:
-              return "CUATRO";
-            case 5:
-              return "CINCO";
-            case 6:
-              return "SEIS";
-            case 7:
-              return "SIETE";
-            case 8:
-              return "OCHO";
-            case 9:
-              return "NUEVE";
-          }
-          return "";
-        }
+        const unidades = [
+          "",
+          "UN",
+          "DOS",
+          "TRES",
+          "CUATRO",
+          "CINCO",
+          "SEIS",
+          "SIETE",
+          "OCHO",
+          "NUEVE",
+          "DIEZ",
+          "ONCE",
+          "DOCE",
+          "TRECE",
+          "CATORCE",
+          "QUINCE",
+          "DIECISEIS",
+          "DIECISIETE",
+          "DIECIOCHO",
+          "DIECINUEVE",
+        ];
+        const decenas = [
+          "",
+          "",
+          "VEINTE",
+          "TREINTA",
+          "CUARENTA",
+          "CINCUENTA",
+          "SESENTA",
+          "SETENTA",
+          "OCHENTA",
+          "NOVENTA",
+        ];
+        const centenas = [
+          "",
+          "CIENTO",
+          "DOSCIENTOS",
+          "TRESCIENTOS",
+          "CUATROCIENTOS",
+          "QUINIENTOS",
+          "SEISCIENTOS",
+          "SETECIENTOS",
+          "OCHOCIENTOS",
+          "NOVECIENTOS",
+        ];
 
-        function Decenas(num) {
-          let decena = Math.floor(num / 10);
-          let unidad = num - decena * 10;
+        function convertirGrupo(n) {
+          let resultado = "";
 
-          switch (decena) {
-            case 1:
-              switch (unidad) {
-                case 0:
-                  return "DIEZ";
-                case 1:
-                  return "ONCE";
-                case 2:
-                  return "DOCE";
-                case 3:
-                  return "TRECE";
-                case 4:
-                  return "CATORCE";
-                case 5:
-                  return "QUINCE";
-                default:
-                  return "DIECI" + Unidades(unidad);
-              }
-            case 2:
-              switch (unidad) {
-                case 0:
-                  return "VEINTE";
-                default:
-                  return "VEINTI" + Unidades(unidad);
-              }
-            case 3:
-              return "TREINTA" + (unidad > 0 ? " Y " + Unidades(unidad) : "");
-            case 4:
-              return "CUARENTA" + (unidad > 0 ? " Y " + Unidades(unidad) : "");
-            case 5:
-              return "CINCUENTA" + (unidad > 0 ? " Y " + Unidades(unidad) : "");
-            case 6:
-              return "SESENTA" + (unidad > 0 ? " Y " + Unidades(unidad) : "");
-            case 7:
-              return "SETENTA" + (unidad > 0 ? " Y " + Unidades(unidad) : "");
-            case 8:
-              return "OCHENTA" + (unidad > 0 ? " Y " + Unidades(unidad) : "");
-            case 9:
-              return "NOVENTA" + (unidad > 0 ? " Y " + Unidades(unidad) : "");
-            case 0:
-              return Unidades(unidad);
-          }
-        }
-
-        function Centenas(num) {
-          let centenas = Math.floor(num / 100);
-          let decenas = num - centenas * 100;
-
-          switch (centenas) {
-            case 1:
-              if (decenas > 0) return "CIENTO " + Decenas(decenas);
-              return "CIEN";
-            case 2:
-              return "DOSCIENTOS " + Decenas(decenas);
-            case 3:
-              return "TRESCIENTOS " + Decenas(decenas);
-            case 4:
-              return "CUATROCIENTOS " + Decenas(decenas);
-            case 5:
-              return "QUINIENTOS " + Decenas(decenas);
-            case 6:
-              return "SEISCIENTOS " + Decenas(decenas);
-            case 7:
-              return "SETECIENTOS " + Decenas(decenas);
-            case 8:
-              return "OCHOCIENTOS " + Decenas(decenas);
-            case 9:
-              return "NOVECIENTOS " + Decenas(decenas);
+          if (n === 100) {
+            return "CIEN";
           }
 
-          return Decenas(decenas);
-        }
-
-        function Seccion(num, divisor, strSingular, strPlural) {
-          let cientos = Math.floor(num / divisor);
-          let resto = num - cientos * divisor;
-
-          let letras = "";
-
-          if (cientos > 0)
-            if (cientos > 1) letras = Centenas(cientos) + " " + strPlural;
-            else letras = strSingular;
-
-          if (resto > 0) letras += "";
-
-          return letras;
-        }
-
-        function Miles(num) {
-          let divisor = 1000;
-          let cientos = Math.floor(num / divisor);
-          let resto = num - cientos * divisor;
-
-          let strMiles = Seccion(num, divisor, "UN MIL", "MIL");
-          let strCentenas = Centenas(resto);
-
-          if (strMiles == "") return strCentenas;
-
-          return strMiles + " " + strCentenas;
-        }
-
-        function Millones(num) {
-          let divisor = 1000000;
-          let cientos = Math.floor(num / divisor);
-          let resto = num - cientos * divisor;
-
-          let strMillones = Seccion(
-            num,
-            divisor,
-            "UN MILLON DE",
-            "MILLONES DE"
-          );
-          let strMiles = Miles(resto);
-
-          if (strMillones == "") return strMiles;
-
-          return strMillones + " " + strMiles;
-        }
-
-        function NumeroALetras(num) {
-          let data = {
-            numero: num,
-            enteros: Math.floor(num),
-            centavos: Math.round(num * 100) - Math.floor(num) * 100,
-            letrasCentavos: "",
-            letrasMonedaPlural: "LEMPIRAS",
-            letrasMonedaSingular: "LEMPIRA",
-          };
-
-          if (data.centavos > 0) {
-            data.letrasCentavos =
-              "CON " +
-              (function () {
-                if (data.centavos == 1)
-                  return Millones(data.centavos) + " CENTAVO";
-                else return Millones(data.centavos) + " CENTAVOS";
-              })();
+          if (n >= 100) {
+            resultado += centenas[Math.floor(n / 100)] + " ";
+            n %= 100;
           }
 
-          if (data.enteros == 0)
-            return (
-              "CERO " + data.letrasMonedaPlural + " " + data.letrasCentavos
-            );
-          if (data.enteros == 1)
-            return (
-              Millones(data.enteros) +
-              " " +
-              data.letrasMonedaSingular +
-              " " +
-              data.letrasCentavos
-            );
-          else
-            return (
-              Millones(data.enteros) +
-              " " +
-              data.letrasMonedaPlural +
-              " " +
-              data.letrasCentavos
-            );
+          if (n >= 20) {
+            resultado += decenas[Math.floor(n / 10)];
+            if (n % 10 !== 0) {
+              resultado += " Y " + unidades[n % 10];
+            }
+          } else if (n > 0) {
+            resultado += unidades[n];
+          }
+
+          return resultado.trim();
         }
 
-        return NumeroALetras(numero);
+        function convertirMiles(n) {
+          if (n === 0) return "";
+          if (n === 1) return "MIL";
+          return convertirGrupo(n) + " MIL";
+        }
+
+        function convertirMillones(n) {
+          if (n === 0) return "";
+          if (n === 1) return "UN MILLON";
+          return convertirGrupo(n) + " MILLONES";
+        }
+
+        if (numero === 0) return "CERO LEMPIRAS";
+
+        let resultado = "";
+        let esNegativo = numero < 0;
+        numero = Math.abs(numero);
+
+        let millones = Math.floor(numero / 1000000);
+        let miles = Math.floor((numero % 1000000) / 1000);
+        let resto = numero % 1000;
+
+        if (millones > 0) {
+          resultado += convertirMillones(millones) + " ";
+        }
+
+        if (miles > 0) {
+          resultado += convertirMiles(miles) + " ";
+        }
+
+        if (resto > 0 || resultado === "") {
+          resultado += convertirGrupo(resto);
+        }
+
+        resultado = resultado.trim();
+        if (esNegativo) {
+          resultado = "MENOS " + resultado;
+        }
+
+        // Agregar 'LEMPIRAS' o 'LEMPIRA' según corresponda
+        resultado += numero === 1 ? " LEMPIRA" : " LEMPIRAS";
+
+        return resultado;
       }
 
       // Set monto en letras
