--- a/indexone.html
+++ b/indexone.html
@@ -468,8 +468,14 @@
         while (number > 0) {
           if (number % 1000 !== 0) {
             var scale = scales[scaleIndex];
-            words =
-              numberToWordsLessThanThousand(number % 1000) + scale + words;
+            var partWords = numberToWordsLessThanThousand(number % 1000);
+
+            // Special case for thousands
+            if (scaleIndex === 1 && number % 1000 === 1) {
+              words = scale + words;
+            } else {
+              words = partWords + scale + words;
+            }
           }
           number = Math.floor(number / 1000);
           scaleIndex++;
@@ -492,7 +498,13 @@
           if (n >= 20) {
             words += tens[Math.floor(n / 10)];
             if (n % 10 !== 0) {
-              words += "Y " + units[n % 10];
+              if (Math.floor(n / 10) === 2) {
+                words = words.slice(0, -1); // Remove space for "VEINTI"
+                words += "I";
+              } else {
+                words += "Y ";
+              }
+              words += units[n % 10];
             }
           } else if (n >= 1) {
             words += units[n];
